--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://http://3.80.218.252/:8081/repository/maven-releases/</url>
+	      <url>http://3.80.218.252:8081/repository/mave-webapplication/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://http://3.80.218.252/:8081/repository/maven-snapshot/</url>
+	      <url>http://3.80.218.252:8081/repository/mave-webapplication//</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
